<resources>
    <string name="app_name">Shopor</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wlcm_dec">The best e-commerce app of century\nfor daily needs</string>
    <string name="wlcm_h1">Evira</string>
    <string name="welcome_to">Welcome to 👋</string>
    <string name="create_your_naccount">Create your\nAccount</string>
    <string name="remember_me">Remember me</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign in</string>
    <string name="login_to_your_naccount">Login to your\nAccount</string>
    <string name="forgot_the_password">Forgot the password ?</string>
    <string name="fill_your_profile">Fill Your Profile</string>
    <string name="full_name">Full Name</string>
    <string name="nickname">Nickname</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="phone_number">Phone Number</string>
    <string name="gender">Gender</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="via_sms">via SMS</string>
    <string name="sample_num">+91 875****120</string>
    <string name="sample_email">bohra*****20@gmail.com</string>
    <string name="forgot_pass">Select which contact detail should we use to reset your password</string>
    <string name="create_your_new_password">Create Your New Password</string>
    <string name="continue_txt">Continue</string>
    <string name="code_sent_to">Code has been send to +91 875*****20</string>
    <string name="resend_code_txt">Resend Code in 55s</string>
    <string name="verify">Verify</string>
    <string name="notification">Notification</string>
    <string name="today">Today</string>
    <string name="noti_title">30% Special Discount!</string>
    <string name="noti_dec">Special promotion only valid today</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="clothes">Clothes</string>
    <string name="smaple_product_title">Rode Microphone</string>
    <string name="sample_rating">4.5</string>
    <string name="sample_sold_item">8,374 sold</string>
    <string name="special_offer">Special Offer</string>
    <string name="discount_percent">30 %</string>
    <string name="sample_special">Today Special!</string>
    <string name="special_offer_dec">Get discount for every order. only valid for today</string>
    <string name="most_popular">Most Popular</string>
    <string name="search_product">Search Product</string>
    <string name="recent">Recent</string>
    <string name="clear_all">Clear All</string>
    <string name="sample_search_item">Black Nike Shoes</string>
    <string name="smaple_searched">Result for Electronic</string>
    <string name="search_founds">12,79 founds</string>
    <string name="smaple_price">$545.00</string>
    <string name="product_detail_review">4.8 (4,749 reviews)</string>
    <string name="pro_name">Vensa Long Shirt</string>
    <string name="sample_dec">In publishing and graphic design, Lorem ipsum is a placeholder text commonly used to demonstrate the visual form of a document or a typeface without relying on meaningful content. Lorem ipsum may be used as a placeholder before final copy is available.</string>
    <string name="description">Description</string>
    <string name="size">Size</string>
    <string name="s">S</string>
    <string name="color">Color</string>
    <string name="quantity">Quantity</string>
    <string name="_2">2</string>
    <string name="total_price">Total price</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="customer_reviews">Customer Reviews</string>
    <string name="smaple_review">The item is very good. my son likes it very mush and play every day 💯 💯 💯</string>
    <string name="like_count">729</string>
    <string name="_6_days_ago">6 days ago</string>
    <string name="all_reviews">All Reviews</string>
    <string name="_4_8_4_974_reviews">4.8 (4,974 reviews)</string>
    <string name="size_m">Size = M</string>
    <string name="checkout">Checkout</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="home">Home</string>
    <string name="order_list">Order List</string>
    <string name="promo_code">Promo Code</string>
    <string name="enter_promo_code">Enter Promo Code</string>
    <string name="amount">Amount</string>
    <string name="shipping">Shipping</string>
    <string name="_30">$ 30</string>
    <string name="continue_to_payment">Continue to Payment</string>
    <string name="default_txt">Default</string>
    <string name="add_promo">Add Promo</string>
    <string name="special_25_off">Special 35% Off</string>
    <string name="promo_dec">New User Special promo</string>
    <string name="payment_dec">Select the payment method you want to use</string>
    <string name="my_wallet">My Wallet</string>
    <string name="track_order">Track Order</string>
    <string name="qty_1">Qty = 1</string>
    <string name="in_delivery">In Delivery</string>
    <string name="completed">Completed</string>
    <string name="leave_review">Leave Review</string>
    <string name="profile">Profile</string>
    <string name="andrew_ainsley">Andrew Ainsley</string>
    <string name="sample_numebr">+91 8755420120</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update">Update</string>
    <string name="address">Address</string>
    <string name="add_new_address">Add New Address</string>
    <string name="general">General</string>
    <string name="search">Search</string>
    <string name="faq_dec">What is Shopor ?</string>
    <string name="customer_service">Customer Service</string>
    <string name="message">Message</string>
</resources>