<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.fragment.auth.register.RegisterFragment">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivBack"
            style="@style/IconImageView"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/black" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCreateAccount"
            style="@style/Text.PoppinSemiBold"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/create_your_naccount"
            android:textSize="@dimen/_24ssp"
            app:layout_constraintStart_toStartOf="@id/ivBack"
            app:layout_constraintTop_toBottomOf="@id/ivBack" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etEmail"
            style="@style/BasicEditText"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:background="@drawable/bg_edit_text"
            android:drawableStart="@drawable/ic_custom_email"
            android:drawablePadding="@dimen/_10sdp"
            android:hint="@string/email"
            android:paddingStart="@dimen/_10sdp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCreateAccount" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPassword"
            style="@style/BasicEditText"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:background="@drawable/bg_edit_text"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="@dimen/_10sdp"
            android:hint="@string/password"
            android:paddingStart="@dimen/_10sdp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etEmail" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cbRemember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:fontFamily="@font/poppins_medium"
            android:paddingStart="@dimen/_5sdp"
            android:text="@string/remember_me"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="@id/etPassword"
            app:layout_constraintStart_toStartOf="@id/etPassword"
            app:layout_constraintTop_toBottomOf="@id/etPassword"
            tools:ignore="RtlSymmetry" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignUp"
            style="@style/BaseButton"
            android:layout_width="@dimen/standard_0"
            android:layout_marginTop="@dimen/_30sdp"
            android:backgroundTint="@color/black"
            android:padding="@dimen/_15sdp"
            android:text="@string/sign_up"
            app:layout_constraintEnd_toEndOf="@id/etPassword"
            app:layout_constraintStart_toStartOf="@id/etPassword"
            app:layout_constraintTop_toBottomOf="@id/cbRemember" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvAlready"
                style="@style/Text.Basic"
                android:text="@string/already_have_an_account"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSignIn"
                style="@style/Text.Basic"
                android:fontFamily="@font/poppins_semibold"
                android:paddingStart="@dimen/_10sdp"
                android:text="@string/sign_in"
                app:layout_constraintBottom_toBottomOf="@id/tvAlready"
                app:layout_constraintStart_toEndOf="@id/tvAlready"
                app:layout_constraintTop_toTopOf="@id/tvAlready"
                tools:ignore="RtlSymmetry" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>