<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/bg_special_offer"
        android:padding="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDiscountPercent"
            style="@style/Text.PoppinBold"
            android:text="@string/discount_percent"
            android:textSize="@dimen/_30ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvOfferType"
            style="@style/Text.PoppinSemiBold"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/sample_special"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/tvDiscountPercent"
            app:layout_constraintTop_toBottomOf="@id/tvDiscountPercent" />


        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Text.Basic"
            android:layout_width="@dimen/standard_0"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/special_offer_dec"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toStartOf="@id/ivProductImage"
            app:layout_constraintStart_toStartOf="@id/tvOfferType"
            app:layout_constraintTop_toBottomOf="@id/tvOfferType" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivProductImage"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_130sdp"
            android:src="@drawable/img_shoe"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>